--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual - Start Bootstrap Theme</title>
+    <title>Pagina CHIC</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -24,8 +24,8 @@
 
   <body>
 
-    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">Business Casual</div>
-    <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+    <div class="tagline-upper text-center text-heading text-shadow text-white mt-5 d-none d-lg-block">Licenciatura en Historia</div>
+    <div class="tagline-lower text-center text-expanded text-shadow text-uppercase text-white mb-5 d-none d-lg-block">Facultad de Filosofía y Letras | Universidad Autónoma de Chihuahua</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
@@ -99,34 +99,32 @@
         </div>
         <!-- Welcome Message -->
         <div class="text-center mt-4">
-          <div class="text-heading text-muted text-lg">Welcome To</div>
-          <h1 class="my-2">Business Casual</h1>
-          <div class="text-heading text-muted text-lg">By
-            <strong>Start Bootstrap</strong>
+          <div class="text-heading text-muted text-lg">Bienvenido a</div>
+          <h1 class="my-2">Nuestro portal Historico</h1>
+          <div class="text-heading text-muted text-lg">Por
+            <strong>Colectivo CHIC</strong>
           </div>
         </div>
       </div>
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Build a website
-          <strong>worth visitng</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">Para Empezar
+          <strong>Un Cordial y Caluroso Saludo</strong>
         </h2>
         <hr class="divider">
         <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/intro-pic.jpg" alt="">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam soluta dolore voluptatem, deleniti dignissimos excepturi veritatis cum hic sunt perferendis ipsum perspiciatis nam officiis sequi atque enim ut! Velit, consectetur.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam pariatur perspiciatis reprehenderit illo et vitae iste provident debitis quos corporis saepe deserunt ad, officia, minima natus molestias assumenda nisi velit?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit totam libero expedita magni est delectus pariatur aut, aperiam eveniet velit cum possimus, autem voluptas. Eum qui ut quasi voluptate blanditiis?</p>
+        <p>Bienvenido a la página de la Licenciatura en Historia de la Facultad de Filosofía y Letras de la Universidad Autónoma de Chihuahua. </p>
+        <p>Este portal, tu portal, fue desarrollado para festejar los 10 años de existencia de esta gran carrera. Aquí podrás conocer información diversa, así como eventos, publicaciones, y algunos maestros que aquí imparten su cátedra.</p>
       </div>
 
       <div class="bg-faded p-4 my-4">
         <hr class="divider">
-        <h2 class="text-center text-lg text-uppercase my-0">Beautiful boxes to
-          <strong>showcase your content</strong>
+        <h2 class="text-center text-lg text-uppercase my-0">Te presentamos Algunos
+          <strong>Eventos Relevantes</strong>
         </h2>
         <hr class="divider">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam soluta dolore voluptatem, deleniti dignissimos excepturi veritatis cum hic sunt perferendis ipsum perspiciatis nam officiis sequi atque enim ut! Velit, consectetur.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam pariatur perspiciatis reprehenderit illo et vitae iste provident debitis quos corporis saepe deserunt ad, officia, minima natus molestias assumenda nisi velit?</p>
+        <p>(En este apartado incluiré el calendario en la siguiente actualización)</p>
       </div>
 
     </div>
@@ -134,7 +132,7 @@
 
     <footer class="bg-faded text-center py-5">
       <div class="container">
-        <p class="m-0">Copyright &copy; Your Website 2017</p>
+        <p class="m-0">Copyright &copy; Colectivo CHIC 2017</p>
       </div>
     </footer>
 
