--- a/about.html
+++ b/about.html
@@ -69,10 +69,8 @@
         <div class="card">
           <div class="card-header" role="tab" id="headingOne">
             <h5 class="mb-0">
-              <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                <h2 class="text-center text-lg text-uppercase my-0">About
-                  <strong>Business Casual</strong>
-                </h2>
+              <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
+                About Business Casual
               </a>
             </h5>
           </div>
