--- a/about.html
+++ b/about.html
@@ -76,7 +76,7 @@
               <div class="card">
                 <div class="card-header" role="tab" id="headingOne">
                   <h5 class="mb-0">
-                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
+                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
                       <strong>Historia</strong>
                     </a>
                   </h5>
@@ -103,7 +103,7 @@
                     
                     <div id="exampleAccordion" data-children=".item">
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="true" aria-controls="exampleAccordion1">
+                        <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="false" aria-controls="exampleAccordion1">
                           Carrera
                         </a>
                         <div id="exampleAccordion1" class="collapse show" role="tabpanel">
@@ -112,7 +112,7 @@
                             <!-- Mision y Vision de la carrera -->
                             <div id="exampleAccordionI" data-children=".item">
                               <div class="item">
-                                <a data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI1" aria-expanded="true" aria-controls="exampleAccordionI1">
+                                <a data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI1" aria-expanded="false" aria-controls="exampleAccordionI1">
                                   Misión
                                 </a>
                                 <div id="exampleAccordionI1" class="collapse show" role="tabpanel">
@@ -147,7 +147,7 @@
                             <!-- Mision y Vision de la delegacion -->
                             <div id="exampleAccordionII" data-children=".item">
                               <div class="item">
-                                <a data-toggle="collapse" data-parent="#exampleAccordionII" href="#exampleAccordionII1" aria-expanded="true" aria-controls="exampleAccordionII1">
+                                <a data-toggle="collapse" data-parent="#exampleAccordionII" href="#exampleAccordionII1" aria-expanded="false" aria-controls="exampleAccordionII1">
                                   Misión
                                 </a>
                                 <div id="exampleAccordionII1" class="collapse show" role="tabpanel">
