--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
                 <div class="card-header" role="tab" id="headingThree">
                   <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                      <strong>Plan</strong> de estudios
+                      <strong>Plan</strong> de <strong>estudios</strong>
                     </a>
                   </h5>
                 </div>
@@ -195,7 +195,7 @@
                 <div class="card-header" role="tab" id="headingFour">
                   <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                      Planta Docente
+                      Planta <strong>Docente</strong>
                     </a>
                   </h5>
                 </div>
@@ -209,7 +209,7 @@
                 <div class="card-header" role="tab" id="headingFive">
                   <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                      Testimonios
+                      <strong>Testimonios</strong>
                     </a>
                   </h5>
                 </div>
