--- a/about.html
+++ b/about.html
@@ -76,13 +76,13 @@
               <div class="card">
                 <div class="card-header" role="tab" id="headingOne">
                   <h5 class="mb-0">
-                    <a data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
+                    <a class="collapsed" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
                       <strong>Historia</strong>
                     </a>
                   </h5>
                 </div>
 
-                <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
+                <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" >
                   <div class="card-body">
                     La licenciatura en Historia se instituye de manera formal el 3 de agosto del 2007 por medio de un acta expedida por el Ingeniero Heriberto Altés Medina, entonces Secretario General de la Universidad Autónoma de Chihuahua. Después de pasar la currícula por revisión con fecha del 28 de junio de ese mismo año ante el H. Consejo Universitario, la carrera es aprobada para incluirse como programa educativo dentro de la Facultad de Filosofía y Letras, anteponiéndose como una opción más para crear generaciones de pensadores humanistas.
                     Entre los primeros dirigentes de esta licenciatura se encuentran la Maestra Marta Larios, seguida de Amarabit Rosales Barrón, para luego ser sustituida por nuestro actual coordinador Braulio Cañas Martínez, el cual implemento la última reforma en la curricula para generar historiadores de calidad a la sociedad.
