--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                   </h5>
                 </div>
 
-                <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" >
+                <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" >
                   <div class="card-body">
                     La licenciatura en Historia se instituye de manera formal el 3 de agosto del 2007 por medio de un acta expedida por el Ingeniero Heriberto Altés Medina, entonces Secretario General de la Universidad Autónoma de Chihuahua. Después de pasar la currícula por revisión con fecha del 28 de junio de ese mismo año ante el H. Consejo Universitario, la carrera es aprobada para incluirse como programa educativo dentro de la Facultad de Filosofía y Letras, anteponiéndose como una opción más para crear generaciones de pensadores humanistas.
                     Entre los primeros dirigentes de esta licenciatura se encuentran la Maestra Marta Larios, seguida de Amarabit Rosales Barrón, para luego ser sustituida por nuestro actual coordinador Braulio Cañas Martínez, el cual implemento la última reforma en la curricula para generar historiadores de calidad a la sociedad.
@@ -106,7 +106,7 @@
                         <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="false" aria-controls="exampleAccordion1">
                           Carrera
                         </a>
-                        <div id="exampleAccordion1" class="collapse show" role="tabpanel">
+                        <div id="exampleAccordion1" class="collapse" role="tabpanel">
                             
                             
                             <!-- Mision y Vision de la carrera -->
@@ -115,7 +115,7 @@
                                 <a data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI1" aria-expanded="false" aria-controls="exampleAccordionI1">
                                   Misión
                                 </a>
-                                <div id="exampleAccordionI1" class="collapse show" role="tabpanel">
+                                <div id="exampleAccordionI1" class="collapse" role="tabpanel">
                                   <p class="mb-3">
                                     La Licenciatura en Historia de la Facultad de Filosofía y Letras de la Universidad Autónoma de Chihuahua tiene como tarea fundamental formar profesionales con una preparación integral, humanística, crítica, analítica, reflexivos, capaces de dar respuesta a los problemas de identidad sociocultural, de innovar para transformar, con un enfoque holístico del pasado para comprender el presente y forjar un futuro mejor.
                                   </p>
@@ -150,7 +150,7 @@
                                 <a data-toggle="collapse" data-parent="#exampleAccordionII" href="#exampleAccordionII1" aria-expanded="false" aria-controls="exampleAccordionII1">
                                   Misión
                                 </a>
-                                <div id="exampleAccordionII1" class="collapse show" role="tabpanel">
+                                <div id="exampleAccordionII1" class="collapse" role="tabpanel">
                                   <p class="mb-3">
                                     La delegación de estudiantes de Historia, por medio de sus representantes ante la Asamblea Nacional de Delegados de Historia, busca conseguir y propiciar la participación de los alumnos de la licenciatura, así como incluir a pasantes y egresados, en diversos foros que desencadenen el intercambio de información relevante para su formación académica.
                                   </p>
