--- a/about.html
+++ b/about.html
@@ -106,6 +106,7 @@
                       </div>
                     </div>
                   </div>
+                </div>
               </div>
               <div class="card">
                 <div class="card-header" role="tab" id="headingTwo">
