--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Start Bootstrap</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Tu Portal Historico</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -75,39 +75,39 @@
             <div class="carousel-item active">
               <img class="d-block img-fluid w-100" src="img/slide-1.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">First Slide</h3>
-                <p class="text-shadow">This is the caption for the first slide.</p>
+                <h3 class="text-shadow">Primera foto</h3>
+                <p class="text-shadow">Banner de la primera foto</p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid w-100" src="img/slide-2.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Second Slide</h3>
-                <p class="text-shadow">This is the caption for the second slide.</p>
+                <h3 class="text-shadow">Segunda foto</h3>
+                <p class="text-shadow">Banner de la segunda foto</p>
               </div>
             </div>
             <div class="carousel-item">
               <img class="d-block img-fluid w-100" src="img/slide-3.jpg" alt="">
               <div class="carousel-caption d-none d-md-block">
-                <h3 class="text-shadow">Third Slide</h3>
-                <p class="text-shadow">This is the caption for the third slide.</p>
+                <h3 class="text-shadow">Tercera foto</h3>
+                <p class="text-shadow">Banner de la tercera foto</p>
               </div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
+            <span class="sr-only">Anterior</span>
           </a>
           <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
+            <span class="sr-only">Siguiente</span>
           </a>
         </div>
         <!-- Welcome Message -->
         <div class="text-center mt-4">
           <div class="text-heading text-muted text-lg">Bienvenido a</div>
           <h1 class="my-2">Nuestro portal Historico</h1>
-          <div class="text-heading text-muted text-lg">Por
+          <div class="text-heading text-muted text-lg">Por: 
             <strong>Colectivo CHIC</strong>
           </div>
         </div>
