--- a/about.html
+++ b/about.html
@@ -420,9 +420,16 @@
                       <div class="card-body">
                         <h4 class="card-title">Paola Juárez</h4>
                         <p class="card-text">Licenciada y maestra en historia por la Universidad Autónoma de Ciudad Juárez</p>
-                        <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">
-                          Tooltip on bottom
-                        </button>
+                        <p>
+                          <a class="btn btn-primary" data-toggle="collapse" href="#collapseExampleD1" aria-expanded="false" aria-controls="collapseExampleD1">
+                            Más Información...
+                          </a>
+                        </p>
+                        <div class="collapse" id="collapseExampleD1">
+                          <div class="card card-body">
+                            Se ha desempeñado como docente en la Escuela de Antropología e Historia del Norte de México, así como en La Universidad Autónoma de Chihuahua donde es profesora de tiempo completo, actualmente imparte clases  en la licenciatura en Historia y en la maestría en Humanidades, es miembro del grupo disciplinar de Historia y Política de la Facultad de Filosofía y letras, autora del Libro: Chamizal. Reflexiones sobre nacionalismo y frontera en torno al acuerdo territorial (1962-1967), ha participado como conferencista en diversos foros y su interés académico está centrado en la historia regional y cultural.
+                          </div>
+                        </div>
                       </div>
                     </div>
                     
