--- a/about.html
+++ b/about.html
@@ -436,7 +436,7 @@
                         </div>
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/PaolaJ.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/HugoM.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Hugo Mendoza</h4>
                               <p class="card-text">Licenciado en Historia por la Universidad Autónoma de Nuevo León</p>
