--- a/about.html
+++ b/about.html
@@ -455,6 +455,132 @@
                         </div>
                       </div>
                     </div>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="card text-center">
+                            <img class="card-img-top" src="img/PaolaJ.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h4 class="card-title">Vladimir Armendáriz</h4>
+                              <p class="card-text">Licenciado en Historia por la Universidad Autónoma de Chihuahua</p>
+                              <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExampleD3" aria-expanded="false" aria-controls="collapseExampleD3">
+                                  Más Información...
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseExampleD3">
+                                <div class="card card-body">
+                                  Cuenta con la Maestría en Historia y Etnohistoria por parte de la Escuela Nacional de Antropología e Historia. Desempeña como docente en la Universidad Autónoma de Chihuahua impartiendo las materias de Historia de México contemporánea, y en modalidad virtual, Historia reciente de la frontera de México, Movimientos sociales en Latinoamérica, Poscolonialismo y descolonización, Historiografía, Estrategias de Investigación, Taller de Investigación y Proyecto de tesis.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="card text-center">
+                            <img class="card-img-top" src="img/HugoM.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h4 class="card-title">Beatriz Rodríguez</h4>
+                              <p class="card-text">Licenciada en Administración de Empresas por parte del Instituto Tecnológico  y de Estudios Superiores de Monterrey</p>
+                              <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExampleD4" aria-expanded="false" aria-controls="collapseExampleD4">
+                                  Más Información...
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseExampleD4">
+                                <div class="card card-body">
+                                  Ha participado en el seminario-taller de Autoevaluación de Programas Educativos en Humanidades así como en el diplomado de Proyectos formativos para el desarrollo de competencias de la Facultad de Filosofía y Letras. Es maestra de historia en la Facultad de Filosofía y Letras de la UACH en la modalidad virtual y presencial de 2007 a la fecha. Las materias que ha impartido son instrumentación didáctica, didáctica de la historia y praxis educativa en presencial y los módulos básicos y teoría en virtual.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="card text-center">
+                            <img class="card-img-top" src="img/PaolaJ.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h4 class="card-title">Alicia de los Ríos</h4>
+                              <p class="card-text">Abogada por la Universidad Autónoma de Chihuahua</p>
+                              <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExampleD5" aria-expanded="false" aria-controls="collapseExampleD5">
+                                  Más Información...
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseExampleD5">
+                                <div class="card card-body">
+                                  Maestra y candidata a doctora en Historia y Etnohistoria por la Escuela Nacional de Antropología en Historia. Investiga organizaciones radicales de izquierda en la segunda mitad del s. XX en México. Es profesora investigadora de la carrera de Historia en la Faculta de Filosofía y Letras de la UACH. Integrantes del seminario permanente sobre las izquierdas en México, del Colectivo Epistémico de Chihuahua (Colepi) y de Izquierdas Latinoamericanas de CLACSO. Actualmente conforma, junto a otros historiadores, la Red Chihuahuense de Historia Oral. Autora de artículos recientes publicados en México y algunos países iberoamericanos. Imparte las clases de Teoría de la Historia I y II,  y las optativas Historia Critica, Historia y Memoria y Seminario de Estudios Regionales II.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="card text-center">
+                            <img class="card-img-top" src="img/HugoM.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h4 class="card-title">Julio Gómez</h4>
+                              <p class="card-text">Licenciado en Historia por la Universidad Autónoma de Chihuahua</p>
+                              <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExampleD6" aria-expanded="false" aria-controls="collapseExampleD6">
+                                  Más Información...
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseExampleD6">
+                                <div class="card card-body">
+                                  Pasante de la maestría en Educación para el Desarrollo Profesional Docente en la ENSECH, actualmente es Coordinador Institucional de Becas de la UACH. Ha impartido cursos como Lengua, cultura y visión del mundo. La identidad del español en México, talleres de Uso y Manejo de Bases de Datos Científicas y Tecnológicas. Como docente, imparte las materias de Universidad y Conocimiento, Culturas Precolombinas, Teoría de la Historia I, Historia Universal Contemporánea, Origen de la Humanidad hasta 1500s, Tecnología y Manejo de la Información, Redacción de Tesis I, Historia de México y Seminario de Praxis Educativa. Como líneas de investigación, se inclina por la historia de la frontera y humanidades para niños. 
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="container">
+                      <div class="row">
+                        <div class="col-lg-6">
+                          <div class="card text-center">
+                            <img class="card-img-top" src="img/PaolaJ.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h4 class="card-title">Eduardo Limas</h4>
+                              <p class="card-text">Licenciado en Psicología por la Escuela de Psicología Carl Rogers</p>
+                              <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExampleD7" aria-expanded="false" aria-controls="collapseExampleD7">
+                                  Más Información...
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseExampleD7">
+                                <div class="card card-body">
+                                  Pasante en la licenciatura en Filosofía por la Universidad Autónoma de Chihuahua, diplomado en Tanatología por el Instituto Mexicano de Tanatología AC, y cursó la maestría en Antropología Física en la Escuela de Antropología e Historia del Norte de México. Ha laborado como docente en el Centro de Estudios Universitarios UNIVER Chihuahua, la Universidad Ciencias del Comportamiento ELPAC y actualmente es docente en la Escuela de Enfermería Christus Muguerza del Parque y la Universidad Autónoma de Chihuahua en la Facultad de Filosofía y Letras y la Facultad de Ingeniería. Sus temáticas de interés son la filosofía de la mente, ciencias cognitivas, etología cognitiva, teoría evolutiva, filosofía, tanatología, ciencia ficción, divulgación científica, antropología física. Imparte las materias de Ecología I y II y Estadística. 
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-lg-6">
+                          <div class="card text-center">
+                            <img class="card-img-top" src="img/HugoM.jpg" alt="Card image cap">
+                            <div class="card-body">
+                              <h4 class="card-title">Victoria Montemayor</h4>
+                              <p class="card-text">Egresada de la carrera de Lengua y Literatura Modernas Letras Italianas en la Facultad de Filosofía y Letras de la UNAM</p>
+                              <p>
+                                <a class="btn btn-primary" data-toggle="collapse" href="#collapseExampleD8" aria-expanded="false" aria-controls="collapseExampleD8">
+                                  Más Información...
+                                </a>
+                              </p>
+                              <div class="collapse" id="collapseExampleD8">
+                                <div class="card card-body">
+                                  Está por recibirse de la Maestría en Humanidades en la Facultad de Filosofía y Letras de la Universidad Autónoma de Chihuahua. Cuenta con estudios de lengua italiana por el Instituto Italiano de Cultura de la Ciudad de México. Ha participado en congresos y coloquios organizados por la Facultad de Filosofía y Letras de la ENAM, así como en la Universidad Autónoma de Chihuahua. Ponente en congresos de literatura Mexicana Contemporánea celebrados por la Universidad de Texas en El Paso, así como en el XVII Congreso de la Asociación Internacional de Teatro Español y Novohispano de los Siglos de Oro, celebrado en Queens College, NY. Ha impartido cursos y charlas sobre literatura italiana. Autora del libro “Besos en el viento: De otoño, invierno y otras estaciones” de la editorial CEID. Traductora del italiano al español. Colaboradora en Círculo de Poesía. Actualmente es catedrática en la Facultad de Economía Internacional y en la Facultad de Filosofía y Letras de la Universidad Autónoma de Chihuahua. En esta última imparte las materias de Universidad y Conocimiento y optativas como Italiano I y II.  
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
                   
                   </div>
                 </div>
