--- a/about.html
+++ b/about.html
@@ -459,7 +459,7 @@
                       <div class="row">
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/PaolaJ.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/VladimirA.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Vladimir Armendáriz</h4>
                               <p class="card-text">Licenciado en Historia por la Universidad Autónoma de Chihuahua</p>
@@ -478,7 +478,7 @@
                         </div>
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/HugoM.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/BeatrizR.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Beatriz Rodríguez</h4>
                               <p class="card-text">Licenciada en Administración de Empresas por parte del Instituto Tecnológico  y de Estudios Superiores de Monterrey</p>
@@ -501,7 +501,7 @@
                       <div class="row">
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/PaolaJ.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/AliciaR.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Alicia de los Ríos</h4>
                               <p class="card-text">Abogada por la Universidad Autónoma de Chihuahua</p>
@@ -520,7 +520,7 @@
                         </div>
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/HugoM.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/JulioG.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Julio Gómez</h4>
                               <p class="card-text">Licenciado en Historia por la Universidad Autónoma de Chihuahua</p>
@@ -543,7 +543,7 @@
                       <div class="row">
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/PaolaJ.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/EduardoL.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Eduardo Limas</h4>
                               <p class="card-text">Licenciado en Psicología por la Escuela de Psicología Carl Rogers</p>
@@ -562,7 +562,7 @@
                         </div>
                         <div class="col-lg-6">
                           <div class="card text-center">
-                            <img class="card-img-top" src="img/HugoM.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/VictoriaM.jpg" alt="Card image cap">
                             <div class="card-body">
                               <h4 class="card-title">Victoria Montemayor</h4>
                               <p class="card-text">Egresada de la carrera de Lengua y Literatura Modernas Letras Italianas en la Facultad de Filosofía y Letras de la UNAM</p>
@@ -594,8 +594,19 @@
                   </h5>
                 </div>
                 <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion">
-                  <div class="card-body">
-                    (Info testimonios)
+                  <div class="card-body text-center">
+                    <p>
+                      Bienvenido a partir de este momento, en esta pestaña encontraras las razones suficientes para interesarte por la historia, así como los puntos más relevantes de esta licenciatura.
+                    </p>
+                    <div>
+                      <!-- Video Introductorio -->
+                    </div>
+                    <div class="card">
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=GwrnjtW-rfk" allowfullscreen></iframe>
+                      <div class="card-body">
+                        <p class="card-text">Nuestros maestros son una parte relevante en la composición de esta carrera, conoce lo que opinan sobre esta.</p>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
