--- a/about.html
+++ b/about.html
@@ -595,18 +595,30 @@
                 </div>
                 <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion">
                   <div class="card-body text-center">
+                    <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=GwrnjtW-rfk" allowfullscreen></iframe>
+                    </div>
                     <p>
                       Bienvenido a partir de este momento, en esta pestaña encontraras las razones suficientes para interesarte por la historia, así como los puntos más relevantes de esta licenciatura.
                     </p>
-                    <div>
-                      <!-- Video Introductorio -->
+                    <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=hbNfIDjlKb4" allowfullscreen></iframe>
                     </div>
-                    <div class="card">
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=GwrnjtW-rfk" allowfullscreen></iframe>
-                      <div class="card-body">
-                        <p class="card-text">Nuestros maestros son una parte relevante en la composición de esta carrera, conoce lo que opinan sobre esta.</p>
-                      </div>
+                    <p>
+                      Nuestros maestros son una parte relevante en la composición de esta carrera, conoce lo que opinan sobre esta.
+                    </p>
+                    <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=tIgtaM7OV4g" allowfullscreen></iframe>
                     </div>
+                    <p>
+                      Los alumnos son el motor y vida de la licenciatura, conoce su punto de vista.
+                    </p>
+                    <div class="embed-responsive embed-responsive-16by9">
+                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=qpfhcljJ9bQ" allowfullscreen></iframe>
+                    </div>
+                    <p>
+                      Los egresados son los que proyectan al mundo lo que aquí se aprende, conoce sus testimonios.
+                    </p>
                   </div>
                 </div>
               </div>
