--- a/about.html
+++ b/about.html
@@ -596,7 +596,7 @@
                 <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion">
                   <div class="card-body text-center">
                     <div class="embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=GwrnjtW-rfk" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/GwrnjtW-rfk" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p>
                       Bienvenido a partir de este momento, en esta pestaña encontraras las razones suficientes para interesarte por la historia, así como los puntos más relevantes de esta licenciatura.
