--- a/about.html
+++ b/about.html
@@ -596,25 +596,25 @@
                 <div id="collapseFive" class="collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion">
                   <div class="card-body text-center">
                     <div class="embed-responsive embed-responsive-16by9">
-                      <iframe width="560" height="315" src="https://www.youtube.com/embed/GwrnjtW-rfk" frameborder="0" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/GwrnjtW-rfk?rel=0" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p>
                       Bienvenido a partir de este momento, en esta pestaña encontraras las razones suficientes para interesarte por la historia, así como los puntos más relevantes de esta licenciatura.
                     </p>
                     <div class="embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=hbNfIDjlKb4" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/8oYodfK4DkE?rel=0" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p>
                       Nuestros maestros son una parte relevante en la composición de esta carrera, conoce lo que opinan sobre esta.
                     </p>
                     <div class="embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=tIgtaM7OV4g" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/mx4bbq5_PQc?rel=0" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p>
                       Los alumnos son el motor y vida de la licenciatura, conoce su punto de vista.
                     </p>
                     <div class="embed-responsive embed-responsive-16by9">
-                      <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=qpfhcljJ9bQ" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/cs72v-2zjsg?rel=0" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p>
                       Los egresados son los que proyectan al mundo lo que aquí se aprende, conoce sus testimonios.
