--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Pagina CHIC - Conocenos</title>
+    <title>Pagina CHIC - Conócenos</title>
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light bg-faded py-lg-4">
       <div class="container">
-        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Tu Portal Historico</a>
+        <a class="navbar-brand text-uppercase text-expanded font-weight-bold d-lg-none" href="#">Tu Portal Histórico</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -69,7 +69,7 @@
           </div>
           <div class="col-lg-8">
             <div id="accordion" role="tablist">
-              <div class="card">
+              <div class="card text-center">
                 <div class="card-header" role="tab" id="headingOne">
                   <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
@@ -105,7 +105,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card">
+              <div class="card text-center">
                 <div class="card-header" role="tab" id="headingTwo">
                   <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
@@ -180,7 +180,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card">
+              <div class="card text-center">
                 <div class="card-header" role="tab" id="headingThree">
                   <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
@@ -402,7 +402,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card">
+              <div class="card text-center">
                 <div class="card-header" role="tab" id="headingFour">
                   <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
@@ -585,7 +585,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card">
+              <div class="card text-center">
                 <div class="card-header" role="tab" id="headingFive">
                   <h5 class="mb-0">
                     <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
