--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
                   <div class="card-body">
                     <div id="exampleAccordionI" data-children=".item">
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI1" aria-expanded="false" aria-controls="exampleAccordionI1">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI1" aria-expanded="false" aria-controls="exampleAccordionI1">
                           Carrera
                         </a>
                         <div id="exampleAccordionI1" class="collapse" role="tabpanel">
@@ -92,11 +92,11 @@
                         </div>
                       </div>
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI2" aria-expanded="false" aria-controls="exampleAccordionI2">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI2" aria-expanded="false" aria-controls="exampleAccordionI2">
                           Delegación de estudiantes de Historia
                         </a>
                         <div id="exampleAccordionI2" class="collapse" role="tabpanel">
-                          <p class="mb-3">
+                          <p class="mb-3 text-heading text-muted text-lg">
                             De manera temprana la licenciatura se adjunta a un cuerpo externo para promover el conocimiento y mostrar las producciones de investigación que se comenzaban a gestar, uniéndose así en 2008 a la Asamblea Nacional de Delegados de Historia encargada de organizar año con año el Encuentro Nacional de Estudiantes de Historia (ENEH) , gracias a la entonces Coordinadora Amarabit Rosales Barrón, los alumnos entre ellos Vladimir Armendáriz viajan a Veracruz sin ningún trabajo en mano para hacer presencia y comenzar a pertenecer a dicha asamblea. Desde entonces han sido varios los delegados que han representado a esta licenciatura, el primero de ellos fue David Varela que inició funciones desde 2008, seguido de Mario Domínguez, Omar Hinojos y Ángel Díaz, este último ejerciendo funciones desde el 2013 a abril del 2014, fecha en la que entrega el puesto a Melissa Lozano Moreno, que a su vez desde mayo de 2017 sede los derechos de este a la actual delegada Antonia Domínguez Quezada. Sin duda alguna el que los alumnos pertenezcan a este órgano estudiantil abre las posibilidades para expender el conocimiento y la investigación histórica, por lo que se presenta como un área de oportunidad para los futuros historiadores que a esta carrera se adjuntan.
                           </p>
                         </div>
@@ -117,7 +117,7 @@
                   <div class="card-body">
                     <div id="exampleAccordion" data-children=".item">
                       <div class="item">
-                        <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="false" aria-controls="exampleAccordion1">
+                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="false" aria-controls="exampleAccordion1">
                           Carrera
                         </a>
                         <div id="exampleAccordion1" class="collapse" role="tabpanel">
