--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
                   <div class="card-body">
                     <div id="exampleAccordion" data-children=".item">
                       <div class="item">
-                        <a class="text-heading text-muted text-lg" data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="false" aria-controls="exampleAccordion1">
+                        <a data-toggle="collapse" data-parent="#exampleAccordion" href="#exampleAccordion1" aria-expanded="false" aria-controls="exampleAccordion1">
                           Carrera
                         </a>
                         <div id="exampleAccordion1" class="collapse" role="tabpanel">
