--- a/about.html
+++ b/about.html
@@ -122,22 +122,22 @@
                         </a>
                         <div id="exampleAccordion1" class="collapse" role="tabpanel">
                             <!-- Mision y Vision de la carrera -->
-                            <div id="exampleAccordionI" data-children=".item">
+                            <div id="exampleAccordionMV" data-children=".item">
                               <div class="item">
-                                <a data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI1" aria-expanded="false" aria-controls="exampleAccordionI1">
+                                <a data-toggle="collapse" data-parent="#exampleAccordionMV" href="#exampleAccordionMV1" aria-expanded="false" aria-controls="exampleAccordionMV1">
                                   Misión
                                 </a>
-                                <div id="exampleAccordionI1" class="collapse" role="tabpanel">
+                                <div id="exampleAccordionMV1" class="collapse" role="tabpanel">
                                   <p class="mb-3">
                                     La Licenciatura en Historia de la Facultad de Filosofía y Letras de la Universidad Autónoma de Chihuahua tiene como tarea fundamental formar profesionales con una preparación integral, humanística, crítica, analítica, reflexivos, capaces de dar respuesta a los problemas de identidad sociocultural, de innovar para transformar, con un enfoque holístico del pasado para comprender el presente y forjar un futuro mejor.
                                   </p>
                                 </div>
                               </div>
                               <div class="item">
-                                <a data-toggle="collapse" data-parent="#exampleAccordionI" href="#exampleAccordionI2" aria-expanded="false" aria-controls="exampleAccordionI2">
+                                <a data-toggle="collapse" data-parent="#exampleAccordionMV" href="#exampleAccordionMV2" aria-expanded="false" aria-controls="exampleAccordionMV2">
                                   Visión
                                 </a>
-                                <div id="exampleAccordionI2" class="collapse" role="tabpanel">
+                                <div id="exampleAccordionMV2" class="collapse" role="tabpanel">
                                   <p class="mb-3">
                                     La Licenciatura en historia para el 2021 contribuirá a los adelantos sociales y culturales mediante la enseñanza, la investigación y la difusión de los conocimientos históricos y sociales, estableciéndose como un centro referencial y de docencia de carácter regional, integrándose al mercado laboral nacional e internacional por medio de la doble titulación.
                                   </p>
