--- a/about.html
+++ b/about.html
@@ -422,7 +422,7 @@
                               <h4 class="card-title">Paola Juárez</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciada y maestra en historia por la Universidad Autónoma de Ciudad Juárez</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" style="background-color: #d9d9d9" data-toggle="collapse" href="#collapseExampleD1" aria-expanded="false" aria-controls="collapseExampleD1">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #d9d9d9; border: none;" data-toggle="collapse" href="#collapseExampleD1" aria-expanded="false" aria-controls="collapseExampleD1">
                                   Más Información...
                                 </a>
                               </p>
