--- a/about.html
+++ b/about.html
@@ -422,7 +422,7 @@
                               <h4 class="card-title">Paola Juárez</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciada y maestra en historia por la Universidad Autónoma de Ciudad Juárez</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" style="background-color: #d9d9d9; border: none;" data-toggle="collapse" href="#collapseExampleD1" aria-expanded="false" aria-controls="collapseExampleD1">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD1" aria-expanded="false" aria-controls="collapseExampleD1">
                                   Más Información...
                                 </a>
                               </p>
@@ -441,7 +441,7 @@
                               <h4 class="card-title">Hugo Mendoza</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciado en Historia por la Universidad Autónoma de Nuevo León</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" data-toggle="collapse" href="#collapseExampleD2" aria-expanded="false" aria-controls="collapseExampleD2">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD2" aria-expanded="false" aria-controls="collapseExampleD2">
                                   Más Información...
                                 </a>
                               </p>
@@ -464,7 +464,7 @@
                               <h4 class="card-title">Vladimir Armendáriz</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciado en Historia por la Universidad Autónoma de Chihuahua</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" data-toggle="collapse" href="#collapseExampleD3" aria-expanded="false" aria-controls="collapseExampleD3">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD3" aria-expanded="false" aria-controls="collapseExampleD3">
                                   Más Información...
                                 </a>
                               </p>
@@ -483,7 +483,7 @@
                               <h4 class="card-title">Beatriz Rodríguez</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciada en Administración de Empresas por parte del Instituto Tecnológico  y de Estudios Superiores de Monterrey</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" data-toggle="collapse" href="#collapseExampleD4" aria-expanded="false" aria-controls="collapseExampleD4">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD4" aria-expanded="false" aria-controls="collapseExampleD4">
                                   Más Información...
                                 </a>
                               </p>
@@ -506,7 +506,7 @@
                               <h4 class="card-title">Alicia de los Ríos</h4>
                               <p class="card-text text-heading text-muted text-lg">Abogada por la Universidad Autónoma de Chihuahua</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" data-toggle="collapse" href="#collapseExampleD5" aria-expanded="false" aria-controls="collapseExampleD5">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD5" aria-expanded="false" aria-controls="collapseExampleD5">
                                   Más Información...
                                 </a>
                               </p>
@@ -525,7 +525,7 @@
                               <h4 class="card-title">Julio Gómez</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciado en Historia por la Universidad Autónoma de Chihuahua</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" data-toggle="collapse" href="#collapseExampleD6" aria-expanded="false" aria-controls="collapseExampleD6">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD6" aria-expanded="false" aria-controls="collapseExampleD6">
                                   Más Información...
                                 </a>
                               </p>
@@ -548,7 +548,7 @@
                               <h4 class="card-title">Eduardo Limas</h4>
                               <p class="card-text text-heading text-muted text-lg">Licenciado en Psicología por la Escuela de Psicología Carl Rogers</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" data-toggle="collapse" href="#collapseExampleD7" aria-expanded="false" aria-controls="collapseExampleD7">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD7" aria-expanded="false" aria-controls="collapseExampleD7">
                                   Más Información...
                                 </a>
                               </p>
@@ -567,7 +567,7 @@
                               <h4 class="card-title">Victoria Montemayor</h4>
                               <p class="card-text text-heading text-muted text-lg">Egresada de la carrera de Lengua y Literatura Modernas Letras Italianas en la Facultad de Filosofía y Letras de la UNAM</p>
                               <p>
-                                <a class="btn btn-primary text-heading text-lg" data-toggle="collapse" href="#collapseExampleD8" aria-expanded="false" aria-controls="collapseExampleD8">
+                                <a class="btn btn-primary text-heading text-lg" style="background-color: #cccccc; border: none;" data-toggle="collapse" href="#collapseExampleD8" aria-expanded="false" aria-controls="collapseExampleD8">
                                   Más Información...
                                 </a>
                               </p>
