--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingOne">
                   <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
+                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="text-center text-lg text-uppercase my-0">
                       <strong>Historia</strong>
                     </a>
                   </h5>
@@ -108,7 +108,7 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingTwo">
                   <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                       <strong>Misión</strong> y <strong>Visión</strong>
                     </a>
                   </h5>
@@ -183,7 +183,7 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingThree">
                   <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                       <strong>Plan</strong> de <strong>estudios</strong>
                     </a>
                   </h5>
@@ -405,7 +405,7 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingFour">
                   <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                       Planta <strong>Docente</strong>
                     </a>
                   </h5>
@@ -588,7 +588,7 @@
               <div class="card text-center">
                 <div class="card-header" role="tab" id="headingFive">
                   <h5 class="mb-0">
-                    <a class="collapsed" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                    <a class="collapsed" style="color: #262626;" data-toggle="collapse" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                       <strong>Testimonios</strong>
                     </a>
                   </h5>
