--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
         </h2>
         <hr class="divider">
         <img class="img-fluid float-left mr-4 d-none d-lg-block" src="img/intro-pic.jpg" alt="">
-        <p>Bienvenido a la página de la Licenciatura en Historia de la Facultad de Filosofía y Letras de la Universidad Autónoma de Chihuahua. </p>
-        <p>Este portal, tu portal, fue desarrollado para festejar los 10 años de existencia de esta gran carrera. Aquí podrás conocer información diversa, así como eventos, publicaciones, y algunos maestros que aquí imparten su cátedra.</p>
+        <p class="text-heading text-muted text-lg">Bienvenido a la página de la Licenciatura en Historia de la Facultad de Filosofía y Letras de la Universidad Autónoma de Chihuahua. </p>
+        <p class="text-heading text-muted text-lg">Este portal, tu portal, fue desarrollado para festejar los 10 años de existencia de esta gran carrera. Aquí podrás conocer información diversa, así como eventos, publicaciones, y algunos maestros que aquí imparten su cátedra.</p>
       </div>
 
       <div class="bg-faded p-4 my-4">
