--- a/about.html
+++ b/about.html
@@ -42,19 +42,19 @@
               </a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="about.html">Conocenos</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="about.html">Conocenos</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="blog.html">Un poco de historia</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="blog.html">Un poco de historia</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="historiadores.html">Historiadores</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="historiadores.html">Historiadores</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="galeria.html">Galería</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="galeria.html">Galería</a>
             </li>
             <li class="nav-item px-lg-4">
-              <a class="nav-link text-uppercase text-expanded" href="contact.html">Contacto</a>
+              <a class="nav-link text-uppercase text-expanded text-center" href="contact.html">Contacto</a>
             </li>
           </ul>
         </div>
